# goki

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .mocharc.cjs  .yarnrc.yml  Anchor.toml  CNAME  README.md  ci.nix  flake.nix  mochasetup.js  package.json  shell.nix  tsconfig.build.json  tsconfig.json
.github/workflows/: programs-e2e.yml  programs-unit.yml  release.yml  site.yml
programs/smart-wallet/: Cargo.toml  README.md
programs/smart-wallet/src/: events.rs  lib.rs  smart_wallet_utils.rs  state.rs  transaction.rs  validators.rs
programs/smart-wallet/src/instructions/: approve.rs  buffer.rs  buffer_append_ix.rs  buffer_close.rs  buffer_execute.rs  buffer_execute_bundle.rs  buffer_execute_ix.rs  buffer_finalize.rs  buffer_finalize_bundle.rs  buffer_init.rs  buffer_set_role.rs  buffer_write.rs  create_transaction.rs  execute_ix.rs  init_ix_buffer.rs  mod.rs  set_buffer_executer.rs  unapprove.rs  write_ix.rs
programs/token-signer/: Cargo.toml  README.md
programs/token-signer/src/: account_validators.rs  lib.rs
src/: constants.ts  index.ts  sdk.ts
src/programs/: index.ts  smartWallet.ts
src/wrappers/instructionBuffer/: index.ts  types.ts
src/wrappers/instructionLoader/: index.ts  types.ts
src/wrappers/smartWallet/: index.ts  pda.ts  types.ts
tests/: instructionBuffer.spec.ts  loader.spec.ts  smartWallet.spec.ts  test-key.json  workspace.ts
ts/: index.html  modules.html
ts/assets/: search.js
ts/classes/: GokiSDK.html  MultisigWrapper.SmartWalletWrapper.html  SmartWallet.SmartWalletWrapper.html  SmartWalletWrapper.html
ts/interfaces/: NewTransactionArgs.html  Programs.html
ts/modules/: MultisigWrapper.html  SmartWallet.html
