[package]
name = "token-signer"
version = "0.10.0"
description = "Sign transactions by owning a token"
homepage = "https://goki.so"
repository = "https://github.com/GokiProtocol/goki"
authors = ["Goki Rajesh <goki@goki.so>"]
license = "AGPL-3.0"
edition = "2021"
keywords = ["solana", "goki", "multisig", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "token_signer"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.22, <0.24"
anchor-spl = ">=0.22, <0.24"
vipers = "^2.0"
